# SHARChecklistChecker

./: .gitignore  README.md  pyproject.toml
shar_checklist/: __init__.py  __main__.py  checklist.py  cli.py  errors.py  gci.py  model.py  names.py  parser.py  report.py  structs.py
tests/: test_checklist.py  test_parser.py
tests/fixtures/: sample_early.gci
