[project]
name = "shar-checklist"
version = "0.1.0"
description = "Read a Simpsons: Hit & Run GameCube save and report 100%-completion checklist progress."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13",
]

[project.scripts]
shar-checklist = "shar_checklist.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shar_checklist"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
